# evimo

./: .gitattributes  .gitignore  README.md
event_imo_datagen/: CMakeLists.txt  LICENSE  README.md  annotation_backprojector.h  common.h  dataset.cpp  dataset.h  dataset_frame.cpp  dataset_frame.h  datastructures.h  event.h  event_vis.h  object.h  offline.cpp  online.cpp  package.xml  postprocessing.cpp  running_average.h  trajectory.h
event_imo_datagen/launch/: event_imo_datagen.launch  event_imo_datagen.rviz  event_imo_offline.launch  event_imo_online.launch
event_imo_datagen/objects/cup/: cup_all_markers.ply  cup_marker_1.ply  cup_marker_3.ply  cup_marker_4.ply  model.ply
event_imo_datagen/objects/room/: .gitattributes  model.ply
event_imo_datagen/objects/toy_car/: config.txt  toy_car_marker_1.ply  toy_car_marker_2.ply
event_imo_datagen/objects/toy_plane/: config.txt  toy_plane_all_markers.ply  toy_plane_marker_1.ply  toy_plane_marker_2.ply  toy_plane_marker_3.ply  toy_plane_marker_5.ply
evimo/: CMakeLists.txt  annotation_backprojector.h  common.h  dataset.cpp  dataset.h  dataset_frame.cpp  dataset_frame.h  datastructures.h  event.h  event_vis.h  filters.h  matplotlibcpp.h  object.h  offline.cpp  online.cpp  package.xml  plot.cpp  plot.h  running_average.h  trajectory.h
evimo/bag_sanity/: README.md  bag_sanity.cpp  topic_sanity.cpp
evimo/calib/: .gitignore  CMakeLists.txt  collect.cfg  collect.cpp  detect_wand.cpp  detect_wand.h  detect_wand.py  refine_calibration.cpp  vicon_calib.py  wand_calib.py
evimo/cnpy/: .gitignore  cnpy.h
evimo/config/: objects.txt
evimo/config/davis_346/: calib.txt  extrinsics.txt
evimo/config/davis_346_radtan/: calib.txt  extrinsics.txt  params.txt
evimo/config/flea3_7/: calib.txt  extrinsics.txt  params.txt
evimo/config/left_camera/: calib.txt  extrinsics.txt  params.txt
evimo/config/main_camera/: extrinsics.txt  params.txt
evimo/config/right_camera/: calib.txt  extrinsics.txt  params.txt
evimo/config/samsung_mono/: .gitignore  calib.txt  extrinsics.txt  params.txt
evimo/config/structure_core/: calib.txt  extrinsics.txt  params.txt
evimo/extract_events/: extract_events.cpp
evimo/launch/: collect.launch  collect.rviz  event_imo_offline.launch  event_imo_online.launch  evimo.rviz
evimo/launch/config/: calib.txt  extrinsics.txt
evimo/launch/em_config/: calib.txt  config.txt  extrinsics.txt
evimo/launch/sc_config/: calib.txt  extrinsics.txt
evimo/objects/box_00/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/box_01/: 1.ply  2.ply  3.ply  markers.ply  model.ply  settings.txt  vicon.vsk
evimo/objects/box_01_markers/: config.txt  settings.txt
evimo/objects/box_02/: 1.ply  2.ply  3.ply  4.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/box_03/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/can_00/: 1.ply  2.ply  3.ply  config.txt  model.ply  settings.txt  vicon.vsk
evimo/objects/car_00/: 1.ply  2.ply  3.ply  4.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/car_01/: 1.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/checkerboard/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/cup/: config.txt  cup_marker_2.ply  cup_marker_5.ply  cup_marker_6.ply  settings.txt
evimo/objects/drone_00/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/drone_01/: 1.ply  2.ply  3.ply  4.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/evimo1_1/: model.ply  settings.txt
evimo/objects/evimo1_2/: settings.txt
evimo/objects/evimo1_3/: settings.txt
evimo/objects/knife_00/: 1.ply  2.ply  3.ply  config.txt  model.ply  settings.txt  vicon.vsk
evimo/objects/marker_00/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/marker_01/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/marker_02/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/marker_03/: 1.ply  2.ply  3.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/plane_00/: 1.ply  2.ply  3.ply  4.ply  config.txt  settings.txt  vicon.vsk
evimo/objects/plane_01/: 1.ply  2.ply  3.ply  config.txt  settings.txt  (+1 more)
tools/: CMakeLists.txt  bag_sanity.py  bag_to_txt.py  dataset_gen.py  evaluate.py  evimo_flow.py  fancy_inference.py  filter.py  flash_calibration.py  get_depth.py  object_viewer.py  rigid_tf.py  setup.py  time_offset.py  utils.py
tools/cloud_converters/: .gitignore  CMakeLists.txt  text_events2cloud.cpp  text_scan2cloud.cpp
tools/evimo2_docker/: .gitignore  Dockerfile  README.md  docker_build.sh  docker_install_mujoco.sh  docker_run.sh
tools/evimo2_generate/: README.md  check_generate.py  clear.sh  clear_all.sh  compress_packaged.py  generate.sh  generate_all.sh  package.py  package_all.py  package_videos.py  split_offline_txt_output.py
tools/evimo2_generation/: clear.sh  copy_videos.py  generate_all.sh  print_stats.py
tools/evimo2_v1_audit/: .gitignore  extract_event_and_frame_times.py
tools/evimo2_v1_inspect/: analyze_timestamps.py  view_sequence_all_cameras.py
tools/evimo2_v2_audit/: analyze_timestamps.py  extract_event_and_frame_times.py  view_sequence_all_cameras.py
tools/evimo2_v2_downloader/: README.md  download_evimo2_v2.sh
tools/evimo2_v2_generate/: README.md  clear_all.sh  compress_packaged.py  generate.sh  generate_all.sh  generate_extrinsics_npz.py  generate_video_website_tables.py  generate_website_videos.py  split_offline_txt_output.py  video_website_table_template.html
tools/evimo2_v2_inspect/: .gitignore  README.md  calc_fov_from_calibration.py  evimo_flow_statistics.py  extract_event_and_frame_times.py  plot_timestamp_group_dts.py  view_sequence_all_cameras.py
tools/evimo_docker/: README.md  docker_build.sh  docker_run.sh  vicon_cmake_disable.patch
tools/flash_calibration/: .gitignore  CMakeLists.txt  img_extract.cpp
vicon_reconstructor/: CMakeLists.txt  README.md  package.xml  vrec.cpp  vrec_photo.cpp
vicon_reconstructor/launch/: vrec.launch  vrec.rviz  vrec_photo.launch
(+157 files in other folders)
